--- a/Project/src/mybatis/props/jdbc.properties
+++ b/Project/src/mybatis/props/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=oracle.jdbc.OracleDriver
-jdbc.url=jdbc:oracle:thin:@localhost:1521:xe
+jdbc.url=jdbc:oracle:thin:@192.168.0.13:1521:xe
 jdbc.user=hr
 jdbc.pwd=1111
